fix: resolve support email recipient when PO is a group
see https://gravitee.atlassian.net/browse/APIM-853
see gravitee-io/issues#6616

(cherry picked from commit 018b3c277882a256d512970b9711d0081175fdf6)